--- a/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
@@ -38,7 +38,7 @@ LORAWAN.Activate_DEBUG_LINE=true
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=Bsp
 LORAWAN.CONTEXT_MANAGEMENT_ENABLED=true
 LORAWAN.HYBRID_ENABLED=false
-LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION
+LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX,VERBOSE_LEVEL
 LORAWAN.LORAMAC_SPECIFICATION_VERSION=0x01000400
 LORAWAN.LORAWAN_APP_KEY=9B,0C,9A,82,E6,74,A5,11,B9,E5,26,A9,11,87,EB,84
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
@@ -52,6 +52,7 @@ LORAWAN.REGION_US915=true
 LORAWAN.STATIC_DEVICE_ADDRESS=false
 LORAWAN.STATIC_DEVICE_EUI=false
 LORAWAN.SUBGHZ_APPLICATION=LORA_END_NODE
+LORAWAN.VERBOSE_LEVEL=VLEVEL_H
 LoRaWAN.BSP.number=7
 LoRaWAN0.BSP.STBoard=false
 LoRaWAN0.BSP.api=Unknown
@@ -299,7 +300,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
