--- a/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
@@ -38,13 +38,15 @@ LORAWAN.Activate_DEBUG_LINE=true
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=Bsp
 LORAWAN.CONTEXT_MANAGEMENT_ENABLED=true
 LORAWAN.HYBRID_ENABLED=false
-LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX,VERBOSE_LEVEL
+LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,VERBOSE_LEVEL,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX
 LORAWAN.LORAMAC_SPECIFICATION_VERSION=0x01000400
-LORAWAN.LORAWAN_APP_KEY=9B,0C,9A,82,E6,74,A5,11,B9,E5,26,A9,11,87,EB,84
+LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
-LORAWAN.LORAWAN_DEVICE_EUI=00,80,E1,15,05,35,97,82
-LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x00,0x80,0xE1,0x15,0x05,0x35,0x97,0x82
-LORAWAN.LORAWAN_NWK_KEY=8B,0C,9A,82,E6,74,A5,11,B9,E5,26,A9,11,87,EB,84
+LORAWAN.LORAWAN_DEVICE_EUI=00,00,00,00,00,00,00,00
+LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00
+LORAWAN.LORAWAN_JOIN_EUI=4A,96,5F,46,0D,E2,71,FD
+LORAWAN.LORAWAN_JOIN_EUI_HEX=0x4A,0x96,0x5F,0x46,0x0D,0xE2,0x71,0xFD
+LORAWAN.LORAWAN_NWK_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_PUBLIC_NETWORK=true
 LORAWAN.LOW_POWER_DISABLE=false
 LORAWAN.REGION_CN470=false
