--- a/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
@@ -31,7 +31,7 @@ Dma.USART1_TX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
-I2C3.Timing=0x20303E5D
+I2C3.Timing=0x10805D88
 KeepUserPlacement=false
 LORAWAN.ACTIVE_REGION=LORAMAC_REGION_EU868
 LORAWAN.Activate_DEBUG_LINE=true
@@ -179,8 +179,8 @@ Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1)
 Mcu.UserName=STM32WLE5JCIx
-MxCube.Version=6.10.0
-MxDb.Version=DB.6.0.100
+MxCube.Version=6.13.0
+MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
