BMP280 - not tested

--- a/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5-FW1.3/Seeed-LoRa-E5.ioc
@@ -34,11 +34,12 @@ I2C3.IPParameters=Timing
 I2C3.Timing=0x10805D88
 KeepUserPlacement=false
 LORAWAN.ACTIVE_REGION=LORAMAC_REGION_EU868
+LORAWAN.APP_TX_DUTYCYCLE=60000
 LORAWAN.Activate_DEBUG_LINE=true
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=Bsp
 LORAWAN.CONTEXT_MANAGEMENT_ENABLED=true
 LORAWAN.HYBRID_ENABLED=false
-LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,VERBOSE_LEVEL,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX
+LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,VERBOSE_LEVEL,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX,APP_TX_DUTYCYCLE
 LORAWAN.LORAMAC_SPECIFICATION_VERSION=0x01000400
 LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
